--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -294,104 +294,104 @@ Will use preferred network instead."</string>
     <string name="simContacts_airplaneMode">To import contacts from the SIM card, first turn off Airplane mode.</string>
     <string name="tty_mode_option_title">TTY mode</string>
     <string name="tty_mode_option_summary">Set TTY mode</string>
-    <string name="enable_pin">Enable/disable SIM PIN</string>
-    <string name="change_pin">Change SIM PIN</string>
-    <string name="enter_pin_text">SIM PIN:</string>
-    <string name="old_pin_label">Old PIN</string>
-    <string name="new_pin_label">New PIN</string>
-    <string name="confirm_pin_label">Confirm new PIN</string>
-    <string name="bad_pin">"The old PIN you typed isn't correct. Try again."</string>
-    <string name="mismatch_pin">"The PINs you typed don't match. Try again."</string>
-    <string name="invalid_pin">Type a PIN that is 4 to 8 numbers.</string>
-    <string name="disable_sim_pin">Disable SIM PIN</string>
-    <string name="enable_sim_pin">Enable SIM PIN</string>
-    <string name="enable_in_progress">Please wait…</string>
-    <string name="enable_pin_ok">SIM PIN enabled.</string>
-    <string name="disable_pin_ok">SIM PIN disabled.</string>
-    <string name="pin_failed">The PIN you typed was incorrect.</string>
-    <string name="pin_changed">SIM PIN changed successfully.</string>
-    <string name="puk_requested">Password incorrect, PIN Blocked! PUK requested.</string>
-    <string name="bad_puk">"The PUK you typed isn't correct. Try again."</string>
-    <string name="invalid_puk">Type a PUK that is 4 to 8 numbers.</string>
-    <string name="pin_lock_warning">"
-Your phone will be locked automatically after another failed attempt"</string>
-    <string name="puk_lock_warning">"
-Your SIM card will be erased after another failed attempt."</string>
-    <string name="puk_label">Input PUK code</string>
+    <string name="enable_pin">Attiva/disattiva il PIN della SIM</string>
+    <string name="change_pin">Modifica il PIN della SIM</string>
+    <string name="enter_pin_text">PIN della SIM:</string>
+    <string name="old_pin_label">Vecchio PIN</string>
+    <string name="new_pin_label">Nuovo PIN</string>
+    <string name="confirm_pin_label">Conferma il nuovo PIN</string>
+    <string name="bad_pin">Il vecchio PIN che hai digitato non è corretto. Riprova</string>
+    <string name="mismatch_pin">I PIN che hai digitato non corrispondno. Riprova</string>
+    <string name="invalid_pin">Digita un PIN che sia composto da 4 a 8 cifre.</string>
+    <string name="disable_sim_pin">Disattiva PIN della SIM</string>
+    <string name="enable_sim_pin">Attiva PIN della SIM</string>
+    <string name="enable_in_progress">Attendere…</string>
+    <string name="enable_pin_ok">PIN della SIM attivato.</string>
+    <string name="disable_pin_ok">PIN della SIM disattivato.</string>
+    <string name="pin_failed">Il PIN che hai digitato non era corretto.</string>
+    <string name="pin_changed">PIN della SIM modificato correttamente.</string>
+    <string name="puk_requested">Password non corretta, PIN bloccato! Ora è richiesto il PUK.</string>
+    <string name="bad_puk">"Il PUK che hai digitato non è corretto. Riprova."</string>
+    <string name="invalid_puk">Digita un PUK che sia composto da 4 a 8 cifre.</string>
+    <string name="pin_lock_warning">
+Il tuo telefono verrà bloccato automaticamente se fallisci un altro tentativo</string>
+    <string name="puk_lock_warning">
+La tua carta SIM sarà cancellata se fallisci un altro tentativo.</string>
+    <string name="puk_label">Digita il codice PUK</string>
     <string name="enter_pin2_text">PIN2</string>
-    <string name="old_pin2_label">Old PIN2</string>
-    <string name="new_pin2_label">New PIN2</string>
-    <string name="confirm_pin2_label">Confirm new PIN2</string>
-    <string name="bad_puk2">"The PUK2 you typed isn't correct. Try again."</string>
-    <string name="bad_pin2">"The old PIN2 you typed isn't correct. Try again."</string>
-    <string name="mismatch_pin2">"The PIN2s you typed don't match. Try again."</string>
-    <string name="invalid_pin2">Type a PIN2 that is 4 to 8 numbers.</string>
-    <string name="invalid_puk2">Type a PUK2 that is 8 numbers.</string>
-    <string name="pin2_changed">PIN2 changed successfully.</string>
-    <string name="label_puk2_code">Type PUK2 code</string>
-    <string name="fdn_enable_puk2_requested">Password incorrect, PIN2 Blocked. Please change PIN2 and retry!</string>
+    <string name="old_pin2_label">Vecchio PIN2</string>
+    <string name="new_pin2_label">Nuovo PIN2</string>
+    <string name="confirm_pin2_label">Confirma il nuovo PIN2</string>
+    <string name="bad_puk2">Il PUK2 che hai digitato non è corretto. Riprova.</string>
+    <string name="bad_pin2">Il vecchio PIN2 che hai digitato non è corretto. Riprova.</string>
+    <string name="mismatch_pin2">I PIN2 che hai digitato non corrispondono. Riprova.</string>
+    <string name="invalid_pin2">Digita un PIN2 che sia composto da 4 a 8 cifre.</string>
+    <string name="invalid_puk2">Digita un PUK2 di 8 cifre.</string>
+    <string name="pin2_changed">PIN2 modifica correttamente.</string>
+    <string name="label_puk2_code">Digita il codice PUK2</string>
+    <string name="fdn_enable_puk2_requested">Password non corretta, PIN2 bloccato. Prego cambiare PIN2 e riprovare!</string>
     <string name="pin2_lock_warning">"
-PIN2 related functions will be locked after another failed attempt"</string>
-    <string name="puk2_label">Input PUK2 code</string>
+Le funzionalità relative al PIN2 saranno bloccate se si fallisce un altro tentativo"</string>
+    <string name="puk2_label">Inserisci il codice PUK2</string>
     <string name="pin_attempts">"
-There are %d remaining attempts."</string>
-    <string name="pin_progress_set_icc_lock">Setting ICC lock state…</string>
-    <string name="pin_progress_set_fdn_lock">Setting FDN lock state…</string>
-    <string name="pin_progress_change_pin">Changing PIN…</string>
-    <string name="pin_progress_change_pin2">Changing PIN2…</string>
-    <string name="pin_progress_unlock_icc">Unlocking SIM card…</string>
-    <string name="doneButton">Done</string>
-    <string name="fake_phone_activity_phoneNumber_text">(650) 555-1234</string>
-    <string name="fake_phone_activity_infoText_text">Incoming phone number</string>
-    <string name="fake_phone_activity_placeCall_text">Fake Incoming Call</string>
-    <string name="card_title_unconditionalCF">Call Forward Unconditional is enabled</string>
-    <string name="card_title_conditionalCF">Call Forward Conditional is enabled</string>
-    <string name="card_title_MOcall_forwarding">Outgoing Forwarded Call</string>
-    <string name="card_title_calliswaiting">Call Waiting</string>
-    <string name="card_title_cugcall">CUG Call</string>
-    <string name="card_title_outgoing_barred">Outgoing Calls Barred</string>
-    <string name="card_title_incoming_barred">Incoming Calls Barred</string>
-    <string name="card_title_clir_suppression_rejected">CLIR Suppression Rejected</string>
-    <string name="card_title_call_deflected">Call Deflected</string>
-    <string name="card_title_MTcall_forwarding">Incoming Call is Forwarded</string>
-    <string name="card_title_forwarded_MTcall">Forwarded Incoming Call</string>
-    <string name="card_title_callonhold">Put on Hold</string>
-    <string name="card_title_callretrieved">Call Retreived</string>
-    <string name="card_title_multipartycall">MultiParty Call</string>
-    <string name="card_title_callonhold_released">Call Released</string>
-    <string name="card_title_forwardcheckreceived">Forward Check Received</string>
-    <string name="card_title_callconnectingect">Call Connecting ECT</string>
-    <string name="card_title_callconnectedect">Call Connected ECT</string>
-    <string name="card_title_deflectedcall">Deflected Call</string>
-    <string name="notification_missedCallsTitle">Missed calls</string>
-    <string name="notification_missedCallsMsg">%s missed calls</string>
-    <string name="notification_missedCallTicker">Missed call from %s</string>
-    <string name="notification_voicemail_title">New voicemail</string>
-    <string name="notification_voicemail_title_count">New voicemail (%d)</string>
-    <string name="notification_voicemail_text_format">Dial %s</string>
-    <string name="notification_voicemail_no_vm_number">Voicemail number unknown</string>
-    <string name="notification_network_selection_title">No service</string>
-    <string name="notification_network_selection_text">Selected network (%s) unavailable</string>
-    <string name="notification_missedCall_call_back">Call back</string>
-    <string name="notification_missedCall_message">Message</string>
-    <string name="incall_error_power_off">To place a call, first turn off Airplane mode.</string>
-    <string name="incall_error_emergency_only">Not registered on network.</string>
-    <string name="incall_error_out_of_service">Mobile network not available.</string>
-    <string name="incall_error_no_phone_number_supplied">Call not sent, no valid number entered.</string>
-    <string name="incall_error_call_failed">Call not sent.</string>
-    <string name="incall_status_dialed_mmi">Starting MMI sequence…</string>
-    <string name="incall_error_turn_off_airplane_mode">Turn off Airplane mode</string>
-    <string name="emergency_enable_radio_dialog_title">Emergency call</string>
-    <string name="dial_emergency_error">Call not sent. %s is not an emergency number!</string>
-    <string name="dial_emergency_empty_error">Call not sent. Dial an emergency number!</string>
-    <string name="importSimEntry">Import</string>
-    <string name="importAllSimEntries">Import all</string>
-    <string name="importingSimContacts">Importing SIM contacts</string>
-    <string name="importToFDNfromContacts">Import from contacts</string>
-    <string name="hac_mode_title">Hearing aids</string>
-    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
-    <string name="dtmf_tones_title">DTMF tones</string>
-    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
+Hai ancora %d tentativi a disposizione."</string>
+    <string name="pin_progress_set_icc_lock">Impostazione stato del blocco ICC…</string>
+    <string name="pin_progress_set_fdn_lock">Impostazione stato del blocco NSF…</string>
+    <string name="pin_progress_change_pin">Modifica PIN…</string>
+    <string name="pin_progress_change_pin2">Modifica PIN2…</string>
+    <string name="pin_progress_unlock_icc">Sblocco carta SIM…</string>
+    <string name="doneButton">Fatto</string>
+    <string name="fake_phone_activity_phoneNumber_text">+39 333 1234567</string>
+    <string name="fake_phone_activity_infoText_text">Numero chiamante</string>
+    <string name="fake_phone_activity_placeCall_text">Finta chiamata entrante</string>
+    <string name="card_title_unconditionalCF">Inoltro incondizionato chiamate attivato</string>
+    <string name="card_title_conditionalCF">Inoltro condizionale chiamate attivato</string>
+    <string name="card_title_MOcall_forwarding">Chiamata in uscita inoltrata</string>
+    <string name="card_title_calliswaiting">Chiamata in attesa</string>
+    <string name="card_title_cugcall">Chiamata GCU</string>
+    <string name="card_title_outgoing_barred">Le chiamate in uscita sono bloccate</string>
+    <string name="card_title_incoming_barred">Le chiamate in arrivo sono bloccate</string>
+    <string name="card_title_clir_suppression_rejected">Soppressione numero chiamante rifiutata</string>
+    <string name="card_title_call_deflected">Chiamata deviata</string>
+    <string name="card_title_MTcall_forwarding">La chiamata in arrivo è stata inoltrata</string>
+    <string name="card_title_forwarded_MTcall">Inoltra chiamata in arrivo</string>
+    <string name="card_title_callonhold">Metti in attesa</string>
+    <string name="card_title_callretrieved">Chiamata riattivata</string>
+    <string name="card_title_multipartycall">Chiamata in conferenza</string>
+    <string name="card_title_callonhold_released">Chiamata rilasciata</string>
+    <string name="card_title_forwardcheckreceived">Ricevuta verifica inoltro</string>
+    <string name="card_title_callconnectingect">Chiamata in corso (trasferita)</string>
+    <string name="card_title_callconnectedect">Connesso (trasferita)</string>
+    <string name="card_title_deflectedcall">Chiamata deviata</string>
+    <string name="notification_missedCallsTitle">Chiamate perse</string>
+    <string name="notification_missedCallsMsg">%s chiamate perse</string>
+    <string name="notification_missedCallTicker">Chiamata persa da %s</string>
+    <string name="notification_voicemail_title">Nuovo messaggio vale</string>
+    <string name="notification_voicemail_title_count">Nuovo messaggio in segreteria (%d)</string>
+    <string name="notification_voicemail_text_format">Componi %s</string>
+    <string name="notification_voicemail_no_vm_number">Numero della segreteria sconosciuto</string>
+    <string name="notification_network_selection_title">Nessun servizio</string>
+    <string name="notification_network_selection_text">La rete selezionata (%s) non è disponibile</string>
+    <string name="notification_missedCall_call_back">Richiama</string>
+    <string name="notification_missedCall_message">Messaggio</string>
+    <string name="incall_error_power_off">Per effettuare una chiamata, disattiva prima la modalità Aereo.</string>
+    <string name="incall_error_emergency_only">Non registratato sulla rete.</string>
+    <string name="incall_error_out_of_service">Rete mobile non disponibile.</string>
+    <string name="incall_error_no_phone_number_supplied">Chiamata non effettuata, non è stato immesso nessun numero valido.</string>
+    <string name="incall_error_call_failed">Chiamata non effettuata.</string>
+    <string name="incall_status_dialed_mmi">Avvio della sequenza MMI…</string>
+    <string name="incall_error_turn_off_airplane_mode">Disattiva la modalità Aereo</string>
+    <string name="emergency_enable_radio_dialog_title">Chiamata di emergenza</string>
+    <string name="dial_emergency_error">Chiamata non effettuata. %s non è un numero di emergenza!</string>
+    <string name="dial_emergency_empty_error">Chiamata non effettuata. Chiama un numero di emergenza!</string>
+    <string name="importSimEntry">Importa</string>
+    <string name="importAllSimEntries">Importa tutto</string>
+    <string name="importingSimContacts">Importazione contatti dalla SIM</string>
+    <string name="importToFDNfromContacts">Importa dai contatti</string>
+    <string name="hac_mode_title">Apparecchi acustici</string>
+    <string name="hac_mode_summary">Attiva la compatibilità con gli apaprecchi acustici</string>
+    <string name="dtmf_tones_title">Toni DTMF</string>
+    <string name="dtmf_tones_summary">Imposta la lunghezza dei toni DTMF</string>
     <string name="xdivert_title">X-Divert</string>
     <string name="xdivert_summary">Impostazioni CFNRc</string>
     <string name="phone_numbers">Inserisci i numeri di telefono</string>
