--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -257,43 +257,43 @@ Will use preferred network instead."</string>
     <string name="enable_disable_multi_category">Multi-category</string>
     <string name="multi_category_enable">Multi-category enabled</string>
     <string name="multi_category_disable">Multi-category disabled</string>
-    <string name="callind_multi_sim">SUBS Settings</string>
-    <string name="manage_fdn_list">FDN list</string>
-    <string name="fdn_activation">FDN activation</string>
-    <string name="fdn_enabled">Fixed Dialing Numbers are enabled</string>
-    <string name="fdn_disabled">Fixed Dialing Numbers are disabled</string>
-    <string name="enable_fdn">Enable FDN</string>
-    <string name="disable_fdn">Disable FDN</string>
-    <string name="change_pin2">Change PIN2</string>
-    <string name="enable_fdn_ok">Disable FDN</string>
-    <string name="disable_fdn_ok">Enable FDN</string>
-    <string name="sum_fdn_change_pin">Change PIN for FDN access</string>
-    <string name="sum_fdn_manage_list">Manage your Fixed Dialing Numbers list</string>
-    <string name="menu_add">Add contact</string>
-    <string name="fdn">Fixed Dialing Numbers</string>
-    <string name="fdn_summary">Restrict outgoing calls to listed FDNs or to numbers with certain prefixes</string>
-    <string name="get_pin2">Type PIN2</string>
-    <string name="name">Name</string>
-    <string name="number">Number</string>
-    <string name="save">Save</string>
-    <string name="add_fdn_contact">Add fixed dialing number</string>
-    <string name="adding_fdn_contact">Adding fixed dialing number…</string>
-    <string name="fdn_contact_added">Fixed dialing number added.</string>
-    <string name="edit_fdn_contact">Edit fixed dialing number</string>
-    <string name="updating_fdn_contact">Updating fixed dialing number…</string>
-    <string name="fdn_contact_updated">Fixed dialing number updated.</string>
-    <string name="delete_fdn_contact">Delete fixed dialing number</string>
-    <string name="deleting_fdn_contact">Deleting fixed dialing number…</string>
-    <string name="fdn_contact_deleted">Fixed dialing number deleted.</string>
-    <string name="pin2_invalid">"FDN wasn't updated because you typed an incorrect PIN."</string>
-    <string name="fdn_invalid_number">"FDN wasn't updated because the number can't exceed 20 digits."</string>
-    <string name="fdn_contacts_empty">No contacts in FDN list.</string>
-    <string name="simContacts_emptyLoading">Reading from SIM card…</string>
-    <string name="exportContacts">Exporting contacts to SIM card…</string>
-    <string name="simContacts_title">Manage SIM card contacts</string>
-    <string name="simContacts_airplaneMode">To import contacts from the SIM card, first turn off Airplane mode.</string>
-    <string name="tty_mode_option_title">TTY mode</string>
-    <string name="tty_mode_option_summary">Set TTY mode</string>
+    <string name="callind_multi_sim">Impostazione sottoscr.</string>
+    <string name="manage_fdn_list">Lista NSF</string>
+    <string name="fdn_activation">Attivazione NSF</string>
+    <string name="fdn_enabled">I Numeri a selezione fissa sono stati attivati</string>
+    <string name="fdn_disabled">I Numeri a selezione fissa sono stati disattivati</string>
+    <string name="enable_fdn">Attiva NSSF</string>
+    <string name="disable_fdn">Disattiva NSF</string>
+    <string name="change_pin2">Modifica PIN2</string>
+    <string name="enable_fdn_ok">NSF disattivati</string>
+    <string name="disable_fdn_ok">NSF attivati</string>
+    <string name="sum_fdn_change_pin">Cambia il PIN per accedere ai NSF</string>
+    <string name="sum_fdn_manage_list">Gestisci la tua lisa di Numeri a selezione fissa</string>
+    <string name="menu_add">Aggiungi contatto</string>
+    <string name="fdn">Numeri a selezione fissa</string>
+    <string name="fdn_summary">Limita le chiamate uscenti a una lista di NSF o ai numeri con certi prefissi</string>
+    <string name="get_pin2">Digita il PIN2</string>
+    <string name="name">Nome</string>
+    <string name="number">Numero</string>
+    <string name="save">Salva</string>
+    <string name="add_fdn_contact">Aggiungi numero a selezione fissa</string>
+    <string name="adding_fdn_contact">Aggiunta numero a selezione fissa…</string>
+    <string name="fdn_contact_added">Numero a selezione fissa aggiunto.</string>
+    <string name="edit_fdn_contact">Modifica numero a selezione fissa</string>
+    <string name="updating_fdn_contact">Aggiornamento numero a selezione fissa…</string>
+    <string name="fdn_contact_updated">Numero a selezione fissa aggiornato.</string>
+    <string name="delete_fdn_contact">Cancella numero a selezione fissa</string>
+    <string name="deleting_fdn_contact">Cancellazione numero a selezione fissa…</string>
+    <string name="fdn_contact_deleted">Numero a selezione fissa cancellato.</string>
+    <string name="pin2_invalid">NSF non aggiornato perchè hai digitato un PIN errato.</string>
+    <string name="fdn_invalid_number">NSF non aggiornato perchè il numero non può essere più lungo di 20 cifre</string>
+    <string name="fdn_contacts_empty">Nessun contatto nella lista NSF.</string>
+    <string name="simContacts_emptyLoading">Lettura dalla carta SIM…</string>
+    <string name="exportContacts">Esportazione contatti nella carta SIM…</string>
+    <string name="simContacts_title">Gestione contatti sulla carta SIM</string>
+    <string name="simContacts_airplaneMode">Per importare contatti dalla carta SIM, disattivare prima la modalità Aereo.</string>
+    <string name="tty_mode_option_title">Modalità TTY</string>
+    <string name="tty_mode_option_summary">Imposta modalità TTY</string>
     <string name="enable_pin">Attiva/disattiva il PIN della SIM</string>
     <string name="change_pin">Modifica il PIN della SIM</string>
     <string name="enter_pin_text">PIN della SIM:</string>
