--- a/Italian/main/ThemeManager.apk/res/values-it/strings.xml
+++ b/Italian/main/ThemeManager.apk/res/values-it/strings.xml
@@ -270,5 +270,5 @@
     <string name="theme_user_agreement_allow">"D'accordo"</string>
     <string name="theme_user_agreement_remind_never">Non mostrare più</string>
     <string name="theme_user_agreement_remind_again">Mostra Condizioni di utilizzo</string>
-    <string name="theme_user_agreement_remind_summary">Mostra l'avviso sulle Condizioni di utilizzo ogni volta. Questa impostazione avrà effetto dopo il riavvio del dispositivo.</string>
+    <string name="theme_user_agreement_remind_summary">"Mostra l'avviso sulle Condizioni di utilizzo ogni volta. Questa impostazione avrà effetto dopo il riavvio del dispositivo."</string>
 </resources>
