--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -38,64 +38,64 @@
     <string name="label_rspdp">RUIM service provider unlock PIN</string>
     <string name="label_rdp">RUIM unlock PIN</string>
     <string name="label_puk">Enter PUK</string>
-    <string name="sim_ndp_unlock_text">Unlock</string>
-    <string name="sim_ndp_dismiss_text">Dismiss</string>
-    <string name="requesting_unlock">Requesting SIM network unlock…</string>
-    <string name="requesting_nw_subset_unlock">Requesting SIM network subset unlock…</string>
-    <string name="requesting_sp_unlock">Requesting SIM service provider unlock…</string>
-    <string name="requesting_corporate_unlock">Requesting SIM corporate unlock…</string>
-    <string name="requesting_sim_unlock">Requesting SIM unlock…</string>
-    <string name="requesting_rnw1_unlock">Requesting RUIM network1 unlock…</string>
-    <string name="requesting_rnw2_unlock">Requesting RUIM network2 unlock…</string>
-    <string name="requesting_rhrpd_unlock">Requesting RUIM hrpd unlock…</string>
-    <string name="requesting_rsp_unlock">Requesting RUIM service provider unlock…</string>
-    <string name="requesting_rc_unlock">Requesting RUIM corporate unlock…</string>
-    <string name="requesting_ruim_unlock">Requesting RUIM unlock…</string>
-    <string name="requesting_puk_unlock">Requesting PUK unlock…</string>
-    <string name="unlock_failed">SIM Network unlock request unsuccessful.</string>
-    <string name="nw_subset_unlock_failed">SIM Network Subset unlock request unsuccessful.</string>
-    <string name="sp_unlock_failed">SIM Service Provider unlock request unsuccessful.</string>
-    <string name="corporate_unlock_failed">SIM Corporate unlock request unsuccessful.</string>
-    <string name="sim_unlock_failed">SIM unlock request unsuccessful.</string>
-    <string name="rnw1_unlock_failed">RUIM Network1 unlock request unsuccessful.</string>
-    <string name="rnw2_unlock_failed">RUIM Network2 unlock request unsuccessful.</string>
-    <string name="rhrpd_unlock_failed">RUIM Hrpd unlock request unsuccessful.</string>
-    <string name="rsp_unlock_failed">RUIM Service Provider unlock request unsuccessful.</string>
-    <string name="rc_unlock_failed">RUIM Corporate unlock request unsuccessful.</string>
-    <string name="ruim_unlock_failed">RUIM unlock request unsuccessful.</string>
-    <string name="puk_unlock_failed">PUK unlock unsuccessful.</string>
-    <string name="unlock_success">SIM Network unlock successful.</string>
-    <string name="nw_subset_unlock_success">SIM Network Subset unlock successful.</string>
-    <string name="sp_unlock_success">SIM Service Provider unlock successful.</string>
-    <string name="corporate_unlock_success">SIM Corporate unlock successful.</string>
-    <string name="sim_unlock_success">SIM unlock successful.</string>
-    <string name="rnw1_unlock_success">RUIM Network1 unlock successful.</string>
-    <string name="rnw2_unlock_success">RUIM Network2 unlock successful.</string>
-    <string name="rhrpd_unlock_success">RUIM Hrpd unlock successful.</string>
-    <string name="rsp_unlock_success">RUIM Service Provider unlock successful.</string>
-    <string name="rc_unlock_success">RUIM Corporate unlock successful.</string>
-    <string name="ruim_unlock_success">RUIM unlock successful.</string>
-    <string name="puk_unlock_success">PUK unlock successful.</string>
-    <string name="labelGSMMore">GSM call settings</string>
-    <string name="labelCDMAMore">CDMA call settings</string>
-    <string name="apn_settings">Access Point Names</string>
-    <string name="settings_label">Network settings</string>
-    <string name="voicemail">Voicemail</string>
-    <string name="voicemail_abbreviated">VM:</string>
-    <string name="networks">Network operators</string>
-    <string name="call_settings">Call settings</string>
-    <string name="additional_gsm_call_settings">Additional settings</string>
-    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
-    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
-    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
-    <string name="labelCallerId">Caller ID</string>
-    <string name="sum_loading_settings">Loading settings…</string>
-    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
-    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
-    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
-    <string name="labelCW">Call waiting</string>
-    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
-    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
+    <string name="sim_ndp_unlock_text">Sblocca</string>
+    <string name="sim_ndp_dismiss_text">Annulla</string>
+    <string name="requesting_unlock">Richiesta sblocco SIM network…</string>
+    <string name="requesting_nw_subset_unlock">Richiesta sblocco SIM network subset…</string>
+    <string name="requesting_sp_unlock">Richiesta sblocco SIM service provider…</string>
+    <string name="requesting_corporate_unlock">Richiesta sblocco SIM corporate…</string>
+    <string name="requesting_sim_unlock">Richiesta sblocco SIM…</string>
+    <string name="requesting_rnw1_unlock">Richiesta sblocco RUIM network1…</string>
+    <string name="requesting_rnw2_unlock">Richiesta sblocco RUIM network2…</string>
+    <string name="requesting_rhrpd_unlock">Richiesta sblocco RUIM hrpd…</string>
+    <string name="requesting_rsp_unlock">Richiesta sblocco RUIM service provider…</string>
+    <string name="requesting_rc_unlock">Richiesta sblocco RUIM corporate…</string>
+    <string name="requesting_ruim_unlock">Richiesta sblocco RUIM…</string>
+    <string name="requesting_puk_unlock">Richiesta sblocco PUK…</string>
+    <string name="unlock_failed">SIM Network, richiesta di sblocco fallita.</string>
+    <string name="nw_subset_unlock_failed">SIM Network Subset, richiesta di sblocco fallita.</string>
+    <string name="sp_unlock_failed">SIM Service Provider, richiesta di sblocco fallita.</string>
+    <string name="corporate_unlock_failed">SIM Corporate, richiesta di sblocco fallita.</string>
+    <string name="sim_unlock_failed">SIM, richiesta di sblocco fallita.</string>
+    <string name="rnw1_unlock_failed">RUIM Network1, richiesta di sblocco fallita.</string>
+    <string name="rnw2_unlock_failed">RUIM Network2, richiesta di sblocco fallita.</string>
+    <string name="rhrpd_unlock_failed">RUIM Hrpd, richiesta di sblocco fallita.</string>
+    <string name="rsp_unlock_failed">RUIM Service Provider, richiesta di sblocco fallita.</string>
+    <string name="rc_unlock_failed">RUIM Corporate, richiesta di sblocco fallita.</string>
+    <string name="ruim_unlock_failed">RUIM, richiesta di sblocco fallita.</string>
+    <string name="puk_unlock_failed">PUK sbloccato con successo.</string>
+    <string name="unlock_success">SIM Network sbloccata con successo.</string>
+    <string name="nw_subset_unlock_success">SIM Network Subset sbloccato con successo.</string>
+    <string name="sp_unlock_success">SIM Service Provider sbloccato con successo.</string>
+    <string name="corporate_unlock_success">SIM Corporate sbloccata con successo.</string>
+    <string name="sim_unlock_success">SIM sbloccata con successo.</string>
+    <string name="rnw1_unlock_success">RUIM Network1 sbloccata con successo.</string>
+    <string name="rnw2_unlock_success">RUIM Network2 sbloccata con successo.</string>
+    <string name="rhrpd_unlock_success">RUIM Hrpd sbloccato con successo.</string>
+    <string name="rsp_unlock_success">RUIM Service Provider sbloccato con successo.</string>
+    <string name="rc_unlock_success">RUIM Corporate sbloccato con successo.</string>
+    <string name="ruim_unlock_success">RUIM sbloccato con successo.</string>
+    <string name="puk_unlock_success">PUK sbloccato con successo.</string>
+    <string name="labelGSMMore">Impostazioni chiamate GSM</string>
+    <string name="labelCDMAMore">Impostazioni chiamate CDMA</string>
+    <string name="apn_settings">Nomi punti di accesso</string>
+    <string name="settings_label">Impostazioni rete</string>
+    <string name="voicemail">Segreteria telefonica</string>
+    <string name="voicemail_abbreviated">Seg:</string>
+    <string name="networks">Operatori di rete</string>
+    <string name="call_settings">Impostazioni chiamate</string>
+    <string name="additional_gsm_call_settings">Impostazioni aggiuntive</string>
+    <string name="sum_gsm_call_settings">Impostazioni aggiuntive solo per le chiamate GSM</string>
+    <string name="additional_cdma_call_settings">Impostazioni aggiuntive per chiamate CDMA</string>
+    <string name="sum_cdma_call_settings">Impostazioni aggiuntive solo per le chiamate CDMA</string>
+    <string name="labelCallerId">ID chiamante</string>
+    <string name="sum_loading_settings">Caricameno impostazioni…</string>
+    <string name="sum_hide_caller_id">Numero nascosto nelle chiamate uscenti</string>
+    <string name="sum_show_caller_id">Numero visibile nelle chiamate uscenti</string>
+    <string name="sum_default_caller_id">"Usa l'impostazione predefinita dell'operatore sulla visualizzazione del mio numero quando effettui chiamate"</string>
+    <string name="labelCW">Chiamate in attesa</string>
+    <string name="sum_cw_enabled">Durante una chiamata, notificami le chiamate in attesa</string>
+    <string name="sum_cw_disabled">Durante una chiamata, notificami le chiamate in attesa</string>
     <string name="error_updating_title">Errore impostazioni chiamate</string>
     <string name="reading_settings">Lettura impostazioni…</string>
     <string name="updating_settings">Aggiornamento impostazioni…</string>
