TeleService.apk - Now really finished

--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -26,18 +26,18 @@
     <string name="no_vm_number_msg">Nella tua carta SIM non è presente il numero della segreteria telefonica.</string>
     <string name="add_vm_number_str">Aggiungi numero</string>
     <string name="puk_unlocked">La tua carta SIM è stata sbloccata. Il telefono verrà sbloccato…</string>
-    <string name="label_ndp">SIM network unlock PIN</string>
-    <string name="label_nsdp">SIM network subset unlock PIN</string>
-    <string name="label_cdp">SIM corporate unlock PIN</string>
-    <string name="label_spdp">SIM service provider unlock PIN</string>
-    <string name="label_sdp">SIM unlock PIN</string>
-    <string name="label_rn1dp">RUIM network1 unlock PIN</string>
-    <string name="label_rn2dp">RUIM network2 unlock PIN</string>
-    <string name="label_rhrpd">RUIM hrpd unlock PIN</string>
-    <string name="label_rcdp">RUIM corporate unlock PIN</string>
-    <string name="label_rspdp">RUIM service provider unlock PIN</string>
-    <string name="label_rdp">RUIM unlock PIN</string>
-    <string name="label_puk">Enter PUK</string>
+    <string name="label_ndp">SIM network, sblocco PIN</string>
+    <string name="label_nsdp">SIM network subset, sblocco PIN</string>
+    <string name="label_cdp">SIM corporate, sblocco PIN</string>
+    <string name="label_spdp">SIM service provider, sblocco PIN</string>
+    <string name="label_sdp">SIM, sblocco PIN</string>
+    <string name="label_rn1dp">RUIM network1, sblocco PIN</string>
+    <string name="label_rn2dp">RUIM network2, sblocco PIN</string>
+    <string name="label_rhrpd">RUIM hrpd, sblocco PIN</string>
+    <string name="label_rcdp">RUIM corporate, sblocco PIN</string>
+    <string name="label_rspdp">RUIM service provider, sblocco PIN</string>
+    <string name="label_rdp">RUIM, sblocco PIN</string>
+    <string name="label_puk">Inserisci PUK</string>
     <string name="sim_ndp_unlock_text">Sblocca</string>
     <string name="sim_ndp_dismiss_text">Annulla</string>
     <string name="requesting_unlock">Richiesta sblocco SIM network…</string>
