--- a/Italian/main/SoundRecorder.apk/res/values-it/strings.xml
+++ b/Italian/main/SoundRecorder.apk/res/values-it/strings.xml
@@ -6,23 +6,23 @@
     <string name="button_ok">Ok</string>
     <string name="timer_format" formatted="false">%02d:%02d</string>
     <string name="error_sdcard_access">Impossibile accedere alla memoria interna o alla scheda SD</string>
-    <string name="error_app_internal">Another app may be using the recording function. Please check and try again.</string>
+    <string name="error_app_internal">"Forse un'altra applicazione sta usando le funzionalità di registrazione. Verifica e riprova."</string>
     <string name="error_app_internal_title">Errore Registratore</string>
     <string name="delete_dialog_message">Vuoi eliminare questa registrazione?</string>
-    <string name="notification_recording">Registrazione...</string>
-    <string name="notification_recording_ticker">Phone muted. Recording…</string>
+    <string name="notification_recording">Registrazione…</string>
+    <string name="notification_recording_ticker">Telefono muto. Registrazione…</string>
     <string name="notification_playback">Riproduzione in corso…</string>
     <string name="notification_stopped">Registrazione interrotta</string>
     <string name="notification_warning">Spazio in esaurimento,restano meno di %d minuti di registrazione</string>
     <string name="record_list">Elenco registrazioni</string>
     <string name="record_list_fm">Registrazioni FM</string>
     <string name="record_list_call">Registrazioni chiamate</string>
-    <string name="record_list_cloud">Registrazioni Cloud</string>
-    <string name="record_list_cloud_fm">Registrazioni FM Cloud</string>
-    <string name="record_list_cloud_call">Registrazioni Chiamate Cloud</string>
+    <string name="record_list_cloud">Registrazioni su Cloud</string>
+    <string name="record_list_cloud_fm">Registrazioni FM su Cloud</string>
+    <string name="record_list_cloud_call">Registrazioni chiamate su Cloud</string>
     <string name="call_record">Registrazione chiamata (%d)</string>
     <string name="fm_record">Registrazione FM (%d)</string>
-    <string name="cloud_record">Registrazione in cloud(%d)</string>
+    <string name="cloud_record">Registrazione su cloud (%d)</string>
     <string name="no_file">Nessuna registrazione</string>
     <string name="loading_recording">Caricamento registrazioni</string>
     <string name="second">%d secondi</string>
@@ -32,26 +32,26 @@
     <string name="rename">Rinomina</string>
     <string name="send_to">Invia a</string>
     <string name="delete">Elimina</string>
-    <string name="deleting_message">Eliminazione...</string>
+    <string name="deleting_message">Eliminazione…</string>
     <string name="rename_dialog_title">Rinomina questa registrazione</string>
     <string name="rename_duplicate">Nome già presente, inserire di nuovo:</string>
     <string name="record_picker_title">Registrazione</string>
-    <string name="dialog_title_storage_full">Not enough space</string>
-    <string name="dialog_content_storage_full">"Recording stopped because there's not enough space left on your phone's internal memory."</string>
-    <string name="status_bar_recording">Registrazione...</string>
-    <string name="status_bar_back">To go back, touch this bar</string>
+    <string name="dialog_title_storage_full">Spazio insufficiente</string>
+    <string name="dialog_content_storage_full">"Registrazione interrotta perchè non c'è suffciente spazio sulla memoria interna del tuo dispositivo."</string>
+    <string name="status_bar_recording">Registrazione…</string>
+    <string name="status_bar_back">Per tornare indietro, tocca questa barra</string>
     <string name="status_bar_recording_pause">Registrazione in pausa.</string>
-    <string name="record_saving">Salvataggio in corso...</string>
-    <string name="record_loading">Caricamento in corso...</string>
+    <string name="record_saving">Salvataggio in corso…</string>
+    <string name="record_loading">Caricamento in corso…</string>
     <string name="low_battery_message_title">Batteria scarica</string>
     <string name="low_battery_warning">Uno spegnimento improvviso potrebbe causare la perdita della registrazione, si raccomanda di registrare con un buon livello di batteria.</string>
-    <string name="low_battery_error">Less than 5% power remaining. To ensure that your recording is not lost, Recorder has stopped and saved.</string>
+    <string name="low_battery_error">Rimane meno del 5% della batteria. Per essere certo che la tua registrazione non vada persa, Registratore ha interrotto e salvato la registrazione.</string>
     <string name="access_error">Impossibile registrare in modalità Ospite</string>
     <string name="record_name_hour">.</string>
     <string name="sound_recorder_settings">Impostazioni</string>
     <string name="menu_settings">Impostazioni</string>
-    <string name="preference_led_indicator">Recording at lock screen</string>
-    <string name="preference_led_indicator_prompt">When recording at lock screen, indicate in status bar and pulse notification light</string>
+    <string name="preference_led_indicator">Registrazione nella schemata di blocco</string>
+    <string name="preference_led_indicator_prompt">Durante una registrazione dalla schermata di blocco, compare una notifica nella barra di stato e la luce di notifica lampeggia</string>
     <string name="preference_record_type_title">Tipo di registrazione</string>
     <string name="preference_scenes">Impostazioni scene</string>
     <string name="preference_record_type_dialog_title">Seleziona un tipo di registrazione</string>
@@ -83,7 +83,7 @@
     <string name="record_download_progress">%d%%</string>
     <string name="record_download_pending">In attesa</string>
     <string name="record_download_activity">Downloader registrazioni</string>
-    <string name="retry">Reiprova</string>
+    <string name="retry">Riprova</string>
     <string name="start">Riprendi</string>
     <string name="record_download_manager">Download manager</string>
     <string name="record_downloading_notification">Download in corso…</string>
@@ -93,18 +93,18 @@
     <string name="sync_only_in_wifi">Sincronizza solo se sei in Wi-Fi</string>
     <string name="sync_only_in_wifi_summary">"Il registratore utilizzerà la tua connessione dati per scaricare o caricare registrazioni quando l'opzione è disattivata"</string>
     <string name="wifi_recommended_title">Avviso traffico</string>
-    <string name="wifi_recommended_body" formatted="false">"Starting this %s  download now may shorten your battery life and/or result in excessive usage of your mobile data connection, which can lead to charges by your mobile operator depending on your data plan.
+    <string name="wifi_recommended_body" formatted="false">"Avviare ora questo download (%s) può accorciare la durata della tua batteria e/o comportare un uso eccessivo della tua connessione dati mobile, il ché può comportare addebiti da parte del tuo operatore mobile in base al tuo piano dati.
 
- Touch %s to start this download the next time that you're connected to a WLAN network."</string>
+ Tocca %s per avviare questo download la prossima volta che sarai connesso ad una rete Wi-Fi."</string>
     <string name="button_queue_for_wifi">Coda</string>
     <string name="button_start_now">Download</string>
     <string name="notification_title_all_paused">Download in pausa</string>
     <string name="notification_message_all_paused">"Potrebbe aumentare l'utilizo dei dati su rete mobile."</string>
     <string name="toast_file_is_downloading">Questo file è in download, attendere prego</string>
     <string name="xiaomi_account_type">com.xiaomi</string>
-    <string name="data_connection_title">Tip</string>
-    <string name="data_connection_body">"Tip:
-In operator network, downloading will cost much."</string>
+    <string name="data_connection_title">Suggerimento</string>
+    <string name="data_connection_body">"Suggerimento:
+Sulla rete mobile, scaricare può costare molto."</string>
     <string name="data_connection_button_text">OK</string>
-    <string name="error_sdcard_unmounted">SD card is unmounted, please insert an SD card</string>
+    <string name="error_sdcard_unmounted">La scheda SD non è montata, si prega di inserire una scheda SD</string>
 </resources>
